--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
       <img src="transit.jpg" alt="transit">
-      
+      <img src="Modern Transit" alt="Modern Transit"
     </div>
   </div>
 </body>
