--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-      <img src="transit.jpg" alt="transit">
-      <img src="Modern Transit" alt="Modern Transit"
+      <img src="transit.jpg" alt="Modern Transit">
+      
     </div>
   </div>
 </body>
